--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
 * {
   margin: 0;
+  font-family: sans-serif;
 }
 
+@font-face {
+  font-family: "norse";
+  src: url(fonts/Norse-Bold.otf);
+}
 
 body {
   display: flex;
   /* align-items: stretch; */
   height: 100vh;
+  width: 100vw;
 }
 
 .background {
@@ -19,19 +25,26 @@ body {
 
 .form {
   flex: 7;
-  height: 35vh;
 }
 
 .description {
-  height: 30vh;
-  padding: 60px 50px 30px 10px;
+  height: 15vh;
+  padding: 50px 150px 30px 60px;
+  font-size: 1.2rem;
+  font-weight: bold;
 }
+
 
 .fieldset {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
-  margin: 20px 250px 20px 30px;
+}
+
+.container {
+  padding: 20px 150px 20px 30px;
+  box-shadow: 0px 5px 10px rgb(0, 0, 0);
+  margin-bottom: 30px;
 }
 
 input, 
@@ -42,4 +55,56 @@ label {
 input {
   width: 250px;
   height: 20px;
+  border: #E5E7EB solid 2px;
+  border-radius: 3px;
+}
+
+input[type="password"]:invalid {
+  border: red solid 2px;
+}
+
+input:focus {
+  outline: none;
+  border: blue solid 2px;
+  /* box-shadow: 0px 0px 5px; */
+}
+
+.logo {
+  height: 15vh;
+  margin-top: 30vh;
+  padding: 10px 0px;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  font-size: 4rem;
+  color: white;
+  gap: 10px;
+}
+
+.logo span {
+  align-self: center;
+  font-family: "norse", sans-serif;
+}
+
+button {
+  font-weight: bold;
+  background-color: #596D48;
+  color: white;
+  padding: 10px 30px;
+  border-radius: 5px;
+  border: none;
+  margin-bottom: 10px;
+}
+
+.submit {
+  margin-left: 30px;
+}
+
+h2 {
+  margin-bottom: 20px;
+}
+
+a {
+  color: #596D48;
+  text-decoration: none;
 }
